Fixed overlapping of image and its attribute

--- a/tarot_juicer/static/css/tarot_key.css
+++ b/tarot_juicer/static/css/tarot_key.css
@@ -628,8 +628,21 @@ section.general {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-left: 20%;
+  /* margin-left: 20%; */
 }
+}
+
+@media (min-width: 700px) and (min-width: 768px) {
+  section.general {
+    text-align: left;
+    border: 1px solid transparent;
+    padding: 0.5em;
+    margin-bottom: 1em;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-left: 20%;
+  }
 }
 
 /*  ##Device = Desktops
